<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="sms_system">SMS System</string>
    <string name="contact">Contact</string>
    <string name="smsSystem">SMS System</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="user_name">User Name</string>
    <string name="sms_details">Sms details</string>

    <string name="call_number">Call number</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ce">ce</string>
    <string name="equals">=</string>
    <string name="ivCallDes">Touch to call</string>
    <string name="ivDelDes">Touch to delete phone number</string>



</resources>